--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "danger-plugin",
     ""
   ],
-  "version": "0.0.2",
+  "version": "0.0.0-development",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
   "scripts": {
@@ -47,7 +47,7 @@
     "jest": "^20.0.1",
     "lint-staged": "^3.4.1",
     "prettier": "^1.3.1",
-    "semantic-release": "^6.3.6",
+    "semantic-release": "^8.2.0",
     "typescript": "^2.3.2",
     "validate-commit-msg": "^2.12.1"
   },
